25-05-2023 Login and signup
25-05-2023 Login and signup done next will be done

--- a/AuctionManagementSystem/AuctionManagementSystem.csproj
+++ b/AuctionManagementSystem/AuctionManagementSystem.csproj
@@ -317,6 +317,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.5" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
@@ -330,7 +331,6 @@
   <ItemGroup>
     <ProjectReference Include="..\AMSModel\AMSModels.csproj" />
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
-    <ProjectReference Include="..\SharedLibrary\SharedLibrary.csproj" />
   </ItemGroup>
 
 </Project>
