--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 .vs/AuctionManagementSystem/DesignTimeBuild/.dtbcache.v2
+.vs/AuctionManagementSystem/FileContentIndex/26f7df15-8c92-44db-a702-e31231f3baf0.vsidx
